# QwenMath2026

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  dpo.yaml  grpo.yaml  infer.yaml  sft_baseline.yaml  sft_cot.yaml
data/processed/: train_cot_test.json
data/processed/test/: test_10.json  test_20.json
data/raw/: submit.csv
data/splits/: train_split.json  val_split.json
docs/: PLAN_PROMPT.md  issues_and_solutions.md
outputs/submissions/: submit_baseline.csv
scripts/: run_all_experiments.sh  run_baseline.sh  run_data_build.sh  run_dpo.sh  run_grpo.sh  run_infer.sh  run_sft_cot.sh
src/: __init__.py
src/data/: __init__.py  answer_extractor.py  data_augmentor.py  data_builder.py  data_repair.py  dataset.py  preprocessor.py  scdpo.py
src/inference/: batch_infer.py  cot_prompting.py  predictor.py
src/models/: __init__.py  model_loader.py  reward.py
src/training/: dpo_trainer.py  grpo_trainer.py  rl_utils.py  sft_trainer.py
src/utils/: __init__.py  config.py  logger.py  metrics.py  seed.py
