[project]
name = "qwenmath2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.18.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "modelscope>=1.10.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "openai>=2.38.0",
    "pandas>=2.0.0",
    "peft>=0.10.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "seaborn>=0.12.0",
    "torch>=2.1.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.65.0",
    "transformers>=4.40.0",
    "trl>=0.12.0",
    "wandb>=0.16.0",
]
